mobile/ios: fastlane polish; split apps for Debug/Release

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,40 +1,41 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
-# Include secrets
-source "$BIRDGRAM_DIR"/.env.secret
+unless_release() {
+  format="$1"; shift
+  x="$1"; shift
+  if [ "$CONFIGURATION" = 'Release' ]; then echo ''; else printf "$format" "$x"; fi
+}
 
 # Version and build
 # - version must increment on each release
 # - (version, build) must increment on each upload
 # - https://stackoverflow.com/a/38009895
 export APP_VERSION='0.0.1' # Bump to release
-export APP_VERSION_BUILD="$("$BIRDGRAM_DIR"/bin/xcode-build-env-gen-app-version-build)"
+export APP_VERSION_BUILD="$("$BIRDGRAM_DIR"/bin/xcode-switch-env-gen-app-version-build)"
 
-# Recompute SCHEME_PREFIX/SCHEME_SUFFIX so we can more easily be called outside of bin/xcode-build-env-from-scheme
-# - TODO Dedupe with bin/xcode-build-env-from-scheme
+# Recompute SCHEME_PREFIX/SCHEME_SUFFIX so we can more easily be called outside of bin/xcode-switch-env-from-scheme
+# - TODO Dedupe with bin/xcode-switch-env-from-scheme
 export SCHEME_NAME="$SCHEME_NAME"
 export SCHEME_PREFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f1)"
 export SCHEME_SUFFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f2-)"
-export TARGET_NAME="$TARGET_NAME"
+export SCHEME_NAME_LOWER="$(echo "$SCHEME_NAME" | awk '{print tolower($0)}')"
+# export TARGET_NAME="$TARGET_NAME" # XXX This is 'switch-env' i/o 'Birdgram' in xcode pre-action because switch-env runs first
+export PROJECT_NAME="$PROJECT_NAME" # This is reliably 'Birdgram' in xcode
 export CONFIGURATION="$CONFIGURATION"
+export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')"
 export BUILD_DATE="$(date -u +%FT%T)"
 export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
 
-export APP_NAME="$SCHEME_NAME"
+export APP_NAME="$SCHEME_NAME$(unless_release ' (%s)' "$CONFIGURATION")"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
 export APP_REGION="$SCHEME_SUFFIX"
-export APP_NAME_LOWER="$(echo "$APP_NAME" | awk '{print tolower($0)}')"
 export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
-export APP_BUNDLE_ID_NAME="${APP_NAME_LOWER// /-}"
-export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME" # Required (for bin/xcode-pre-action-gen-env-file)
-export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME"
+export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_release '.%s' "$CONFIGURATION_LOWER")" # Required
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_release '-%s' "$CONFIGURATION_LOWER")"
 
 # TODO Add this to LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-if [ "$CONFIGURATION" != 'Debug' ]; then
-  export LAUNCH_SCREEN_DEBUG=""
-else
-  export LAUNCH_SCREEN_DEBUG="Built: $BUILD_DATE"
-fi
+export LAUNCH_SCREEN_DEBUG="$(unless_release 'Built: %s' "$BUILD_DATE")"
