--- a/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/switch-env.xcscheme
+++ b/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/switch-env.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B7068ADF21ED36B700EC2F0B"
-               BuildableName = "build-env"
-               BlueprintName = "build-env"
+               BuildableName = "switch-env"
+               BlueprintName = "switch-env"
                ReferencedContainer = "container:Birdgram.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B7068ADF21ED36B700EC2F0B"
-            BuildableName = "build-env"
-            BlueprintName = "build-env"
+            BuildableName = "switch-env"
+            BlueprintName = "switch-env"
             ReferencedContainer = "container:Birdgram.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,8 +64,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B7068ADF21ED36B700EC2F0B"
-            BuildableName = "build-env"
-            BlueprintName = "build-env"
+            BuildableName = "switch-env"
+            BlueprintName = "switch-env"
             ReferencedContainer = "container:Birdgram.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
