--- a/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA3500.xcscheme
+++ b/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA3500.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B7068ADF21ED36B700EC2F0B"
-               BuildableName = "build-env"
-               BlueprintName = "build-env"
+               BuildableName = "switch-env"
+               BlueprintName = "switch-env"
                ReferencedContainer = "container:Birdgram.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
