mobile: Twiddle comments

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -20,7 +20,7 @@ export SCHEME_NAME="$SCHEME_NAME"
 export SCHEME_PREFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f1)"
 export SCHEME_SUFFIX="$(echo "$SCHEME_NAME" | cut -d' ' -f2-)"
 export SCHEME_NAME_LOWER="$(echo "$SCHEME_NAME" | awk '{print tolower($0)}')"
-# export TARGET_NAME="$TARGET_NAME" # XXX This is 'switch-env' i/o 'Birdgram' in xcode pre-action because switch-env runs first
+# export TARGET_NAME="$TARGET_NAME" # Avoid: this is 'switch-env' i/o 'Birdgram' in xcode pre-action because switch-env runs first
 export PROJECT_NAME="$PROJECT_NAME" # This is reliably 'Birdgram' in xcode
 export CONFIGURATION="$CONFIGURATION"
 export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')"
@@ -36,6 +36,6 @@ export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
 export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_release '.%s' "$CONFIGURATION_LOWER")" # Required
 export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_release '-%s' "$CONFIGURATION_LOWER")"
 
-# TODO Add this to LaunchScreen.template.xib
+# TODO Add a label for this in LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
 export LAUNCH_SCREEN_DEBUG="$(unless_release 'Built: %s' "$BUILD_DATE")"
