--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,10 +1,16 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
-unless_release() {
+# 3 configs: Debug, Release, Release-AppStore
+# - (See Fastfile for details)
+unless_appstore() {
   format="$1"; shift
   x="$1"; shift
-  if [ "$CONFIGURATION" = 'Release' ]; then echo ''; else printf "$format" "$x"; fi
+  if [[ "$CONFIGURATION" = *AppStore* ]]; then
+    echo ''
+  else
+    printf "$format" "$x"
+  fi
 }
 
 # Version and build
@@ -27,15 +33,15 @@ export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')
 export BUILD_DATE="$(date -u +%FT%T)"
 export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
 
-export APP_NAME="$SCHEME_NAME$(unless_release ' (%s)' "$CONFIGURATION")"
+export APP_NAME="$SCHEME_NAME$(unless_appstore ' (%s)' "$CONFIGURATION")"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
 export APP_REGION="$SCHEME_SUFFIX"
 export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
 export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
-export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_release '.%s' "$CONFIGURATION_LOWER")" # Required
-export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_release '-%s' "$CONFIGURATION_LOWER")"
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_appstore '.%s' "$CONFIGURATION_LOWER")" # Required
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_appstore '-%s' "$CONFIGURATION_LOWER")"
 
 # TODO Add a label for this in LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-export LAUNCH_SCREEN_DEBUG="$(unless_release 'Built: %s' "$BUILD_DATE")"
+export LAUNCH_SCREEN_DEBUG="$(unless_appstore 'Built: %s' "$BUILD_DATE")"
