mobile/ios: Rename Debug/Release/Release-Appstore -> Debug/Stage/Release [still broken]

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,12 +1,12 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
-# 3 configs: Debug, Release, Release-AppStore
+# 3 configs: Debug, Release-local, Release
 # - (See Fastfile for details)
-unless_appstore() {
+if_local() {
   format="$1"; shift
   x="$1"; shift
-  if [[ "$CONFIGURATION" = *AppStore* ]]; then
+  if [[ "$CONFIGURATION" = Release ]]; then
     echo ''
   else
     printf "$format" "$x"
@@ -33,15 +33,15 @@ export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')
 export BUILD_DATE="$(date -u +%FT%T)"
 export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
 
-export APP_NAME="$SCHEME_NAME$(unless_appstore ' (%s)' "$CONFIGURATION")"
+export APP_NAME="$SCHEME_NAME$(if_local ' (%s)' "$CONFIGURATION")"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
 export APP_REGION="$SCHEME_SUFFIX"
 export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
 export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
-export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_appstore '.%s' "$CONFIGURATION_LOWER")" # Required
-export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_appstore '-%s' "$CONFIGURATION_LOWER")"
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(if_local '.%s' "$CONFIGURATION_LOWER")" # Required
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(if_local '-%s' "$CONFIGURATION_LOWER")" # FIXME Broken? (Not obvious why...)
 
 # TODO Add a label for this in LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-export LAUNCH_SCREEN_DEBUG="$(unless_appstore 'Built: %s' "$BUILD_DATE")"
+export LAUNCH_SCREEN_DEBUG="$(if_local 'Built: %s' "$BUILD_DATE")"
