--- a/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA100.xcscheme
+++ b/Birdgram/ios/Birdgram.xcodeproj/xcshareddata/xcschemes/Birdgram CA100.xcscheme
@@ -102,7 +102,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Stage"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
