mobile/ios: Kill config Stage [wip]

--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,9 +1,7 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
-# 3 configs: Debug, Release-local, Release
-# - (See Fastfile for details)
-if_local() {
+if_debug() {
   format="$1"; shift
   x="$1"; shift
   if [[ "$CONFIGURATION" = Release ]]; then
@@ -32,16 +30,17 @@ export CONFIGURATION="$CONFIGURATION"
 export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')"
 export BUILD_DATE="$(date -u +%FT%T)"
 export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
+export PROVISIONING_PROFILE_TYPE="${PROVISIONING_PROFILE_TYPE:-Development}" # For xcode (Development) vs. fastlane (AppStore)
 
-export APP_NAME="$SCHEME_NAME$(if_local ' (%s)' "$CONFIGURATION")"
+export APP_NAME="$SCHEME_NAME$(if_debug ' (%s)' "$CONFIGURATION")"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
 export APP_REGION="$SCHEME_SUFFIX"
 export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
 export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
-export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(if_local '.%s' "$CONFIGURATION_LOWER")" # Required
-export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(if_local '-%s' "$CONFIGURATION_LOWER")" # FIXME Broken? (Not obvious why...)
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(if_debug '.%s' "$CONFIGURATION_LOWER")" # Required
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(if_debug '-%s' "$CONFIGURATION_LOWER")" # FIXME Broken? (Not obvious why...)
 
 # TODO Add a label for this in LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-export LAUNCH_SCREEN_DEBUG="$(if_local 'Built: %s' "$BUILD_DATE")"
+export LAUNCH_SCREEN_DEBUG="$(if_debug 'Built: %s' "$BUILD_DATE")"
