--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,13 +1,23 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
-if_debug() {
+unless_appstore() {
+  format="$1"; shift
+  x="$1"; shift
+  if [[ "$PROVISIONING_PROFILE_TYPE" = AppStore ]]; then
+    echo ''
+  else
+    printf -- "$format" "$x"
+  fi
+}
+
+unless_release() {
   format="$1"; shift
   x="$1"; shift
   if [[ "$CONFIGURATION" = Release ]]; then
     echo ''
   else
-    printf "$format" "$x"
+    printf -- "$format" "$x"
   fi
 }
 
@@ -30,17 +40,21 @@ export CONFIGURATION="$CONFIGURATION"
 export CONFIGURATION_LOWER="$(echo "$CONFIGURATION" | awk '{print tolower($0)}')"
 export BUILD_DATE="$(date -u +%FT%T)"
 export WORKSPACE="$SCHEME_PREFIX.xcworkspace"
-export PROVISIONING_PROFILE_TYPE="${PROVISIONING_PROFILE_TYPE:-Development}" # For xcode (Development) vs. fastlane (AppStore)
 
-export APP_NAME="$SCHEME_NAME$(if_debug ' (%s)' "$CONFIGURATION")"
+# Provisioning profile crap (huge timesink to sort out)
+# - (See: Fastfile, .env.shared, bin/fastlane-env, bin/xcode-switch-env-from-scheme)
+export PROVISIONING_PROFILE_TYPE="${PROVISIONING_PROFILE_TYPE:-Development}" # For xcode (Development) vs. fastlane (AppStore)
+export CODE_SIGN_IDENTITY="${CODE_SIGN_IDENTITY:-iPhone Developer}" # For xcode (iPhone Developer) vs. fastlane (iPhone Distribution)
+
+export APP_NAME="$SCHEME_NAME$(unless_appstore ' (%s)' "$CONFIGURATION")"
 export APP_BIRDGRAM="$SCHEME_PREFIX"
 export APP_REGION="$SCHEME_SUFFIX"
 export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
 export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
-export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(if_debug '.%s' "$CONFIGURATION_LOWER")" # Required
-export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(if_debug '-%s' "$CONFIGURATION_LOWER")" # FIXME Broken? (Not obvious why...)
+export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_release '.%s' "$CONFIGURATION_LOWER")" # Required
+export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_release '-%s' "$CONFIGURATION_LOWER")"
 
 # TODO Add a label for this in LaunchScreen.template.xib
 # - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
-export LAUNCH_SCREEN_DEBUG="$(if_debug 'Built: %s' "$BUILD_DATE")"
+export LAUNCH_SCREEN_DEBUG="$(unless_appstore 'Built: %s' "$BUILD_DATE")"
