mobile: Add TagLib (backed by native iOSTagLib) to read/write audio file metadata

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "swift-npy"]
   path = Birdgram/ios/swift-npy
   url = git@github.com:qoncept/swift-npy.git
+[submodule "iOSTagLib"]
+  path = Birdgram/ios/Bubo/iOSTagLib
+  url = git@github.com:jdanbrown/iOSTagLib.git
