--- a/Birdgram/package.json
+++ b/Birdgram/package.json
@@ -104,6 +104,7 @@
     "animated.macro": "^0.0.5",
     "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
+    "babel-plugin-module-resolver": "^3.1.3",
     "jest": "23.6.0",
     "jest-runner-tsc": "^1.3.2",
     "metro-react-native-babel-preset": "0.48.0",
