--- a/Birdgram/tsconfig.json
+++ b/Birdgram/tsconfig.json
@@ -49,9 +49,9 @@
     "noFallthroughCasesInSwitch": true,       // Report errors for fallthrough cases in switch statement.
 
     // Module Resolution Options
+    //  - https://www.typescriptlang.org/docs/handbook/module-resolution.html
     // "moduleResolution": "node",            // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
-    // NOTE I tried uncommenting baseUrl once and absolute imports didn't just work...
-    // "baseUrl": "./",                       // Base directory to resolve non-absolute module names.
+    "baseUrl": ".",                           // For absolute imports like 'app/datatypes/rec' i/o '../../datatypes/rec'
     // "paths": {},                           // A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
     // "rootDirs": [],                        // List of root folders whose combined content represents the structure of the project at runtime.
     // "typeRoots": [],                       // List of folders to include type definitions from.
