mobile: Add react-native-device-info

--- a/Birdgram/android/app/build.gradle
+++ b/Birdgram/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
     compile project(':react-native-config')
     compile project(':react-native-audio-record')
     compile project(':react-native-gesture-handler')
