Rename dirs: features->model, Birdgram->mobile [prepare file references]

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Surge"]
-  path = Birdgram/ios/Surge
+  path = mobile/ios/Surge
   url = git@github.com:jdanbrown/Surge.git
 [submodule "swift-npy"]
-  path = Birdgram/ios/swift-npy
+  path = mobile/ios/swift-npy
   url = git@github.com:qoncept/swift-npy.git
 [submodule "iOSTagLib"]
-  path = Birdgram/ios/Bubo/iOSTagLib
+  path = mobile/ios/Bubo/iOSTagLib
   url = git@github.com:jdanbrown/iOSTagLib.git
