--- a/mobile/package.json
+++ b/mobile/package.json
@@ -107,6 +107,7 @@
     "app-icon": "^0.6.3",
     "babel-jest": "23.6.0",
     "babel-plugin-module-resolver": "^3.1.3",
+    "babel-plugin-wildcard": "^5.0.0",
     "jest": "23.6.0",
     "jest-runner-tsc": "^1.3.2",
     "metro-react-native-babel-preset": "0.48.0",
