--- a/mobile/package.json
+++ b/mobile/package.json
@@ -48,6 +48,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-fast-image": "^5.0.10",
     "react-native-gesture-handler": "^1.0.8",
+    "react-native-icon-badge": "^1.1.3",
     "react-native-keep-awake": "^3.1.0",
     "react-native-material-design-searchbar": "^1.8.0",
     "react-native-microphone-stream": "git://github.com/chadsmith/react-native-microphone-stream.git#4cca1e7",
