--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -80,6 +80,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-sentry/sentry.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -140,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sentry')
     compile project(':react-native-device-info')
     compile project(':react-native-config')
     compile project(':react-native-audio-record')
