--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -75,9 +75,10 @@ target 'Birdgram' do
   #
   # Disabled from `react-native link react-native-device-info`
   # pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-
-  # From https://sentry.io/onboarding/dan-brown/birdgram/configure/react-native/
-  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
+  #
+  # Disabled from `react-native link react-native-sentry`
+  #   - https://sentry.io/onboarding/dan-brown/birdgram/configure/react-native/
+  # pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
 
   # This causes warnings. Commented out for now.
   # target 'BirdgramTests' do
