mobile: Fix app store warning
From email:

> Subject: App Store Connect: Your app "Birdgram US" (Apple ID:
> 1438263356) has one or more issues
>
> We identified one or more issues with a recent delivery for your app,
> "Birdgram US". Your delivery was successful, but you may wish to
> correct the following issues in your next delivery:
>
> Missing Purpose String in Info.plist File - Your app's code references
> one or more APIs that access sensitive user data. The app's Info.plist
> file should contain a NSLocationAlwaysUsageDescription key with a
> user-facing purpose string explaining clearly and completely why your
> app needs the data. Starting Spring 2019, all apps submitted to the
> App Store that access user data will be required to include a purpose
> string. If you're using external libraries or SDKs, they may reference
> APIs that require a purpose string. While your app might not use these
> APIs, a purpose string is still required. You can contact the
> developer of the library or SDK and request they release a version of
> their code that doesn't contain the APIs. Learn more
> (https://developer.apple.com/documentation/uikit/core_app/protecting_the_user_s_privacy).

--- a/mobile/ios/Birdgram/Info.plist
+++ b/mobile/ios/Birdgram/Info.plist
@@ -64,6 +64,8 @@
 	<string>Birdgram saves the GPS location of each recording you make</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Birdgram saves the GPS location of each recording you make</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Birdgram saves the GPS location of each recording you make</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Birdgram uses the microphone to record bird calls</string>
 	<key>NSMotionUsageDescription</key>
