--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -25,7 +25,8 @@ flake8-import-order==0.17.1
 frozendict==1.2
 gcsfs==0.1.0
 glances==2.11.1
-google-cloud==0.33.1
+# google-cloud==0.33.1 # XXX Had to upgrade google-cloud-bigquery for pandas-gbq, hope it didn't break anything...
+google-cloud-bigquery==1.9.0
 graphviz==0.8.4
 httpie==0.9.9
 ipykernel==4.9.0 # Includes fix for https://github.com/plotly/dash/issues/257#issuecomment-395610889
@@ -40,6 +41,7 @@ more-itertools==4.3.0
 nose==1.3.7 # For sklearn.utils.estimator_checks
 oyaml==0.6
 pandas==0.23.4 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
+pandas-gbq==0.11.0
 parse==1.8.4
 pdbpp==0.9.2
 pipdeptree==0.13.0
