--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sqlite-plugin-legacy-support')
     compile project(':react-native-sentry')
     compile project(':react-native-device-info')
     compile project(':react-native-config')
