--- a/mobile/android/settings.gradle
+++ b/mobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Birdgram'
+include ':react-native-sqlite-plugin-legacy-support'
+project(':react-native-sqlite-plugin-legacy-support').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-plugin-legacy-support/android')
 include ':react-native-sentry'
 project(':react-native-sentry').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sentry/android')
 include ':react-native-device-info'
