--- a/mobile/package.json
+++ b/mobile/package.json
@@ -57,7 +57,7 @@
     "react-native-sentry": "^0.42.0",
     "react-native-settings-list": "^1.8.0",
     "react-native-sound": "^0.10.9",
-    "react-native-sqlite-storage": "^3.3.7",
+    "react-native-sqlite-plugin-legacy-support": "https://github.com/brodybits/react-native-sqlite-plugin-legacy-support#042f681",
     "react-native-status-bar-height": "^2.1.0",
     "react-native-tab-view": "^1.3.0",
     "react-native-timer": "^1.3.4",
