--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "concat-typed-array": "^1.0.2",
     "d3-color": "^1.2.3",
     "d3-scale-chromatic": "^1.3.3",
+    "dedent": "^0.7.0",
     "fbemitter": "^2.1.1",
     "fft.js": "^4.0.3",
     "geolib": "^2.0.24",
@@ -82,6 +83,7 @@
     "@types/cheerio": "^0.22.10",
     "@types/d3-color": "^1.2.1",
     "@types/d3-scale-chromatic": "^1.3.0",
+    "@types/dedent": "^0.7.0",
     "@types/fbemitter": "^2.0.32",
     "@types/geolib": "^2.0.23",
     "@types/humanize-plus": "^1.8.0",
