mobile/.env.shared: Add MATCH_APP_IDENTIFIER (to fix `fastlane match` prompt for app_identifier)

--- a/mobile/.env.shared
+++ b/mobile/.env.shared
@@ -53,6 +53,7 @@ export APP_BIRDGRAM_LOWER="$(echo "$APP_BIRDGRAM" | awk '{print tolower($0)}')"
 export APP_REGION_LOWER="$(echo "$APP_REGION" | awk '{print tolower($0)}')"
 export APP_BUNDLE_ID_NAME="${SCHEME_NAME_LOWER// /-}"
 export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME$(unless_release '.%s' "$CONFIGURATION_LOWER")" # Required
+export MATCH_APP_IDENTIFIER="$APP_BUNDLE_ID" # To avoid `match` prompting for app_identifier [FIXME Why isn't ios/fastlane/Fastfile sufficient?]
 export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME$(unless_release '-%s' "$CONFIGURATION_LOWER")"
 
 # TODO Add a label for this in LaunchScreen.template.xib
